# MeshTNC

./: .gitignore  .gitmodules  Doxyfile  README.md  build.sh  license.txt  meshcoreDissector.lua  platformio.ini
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: ci.yml
docs/: regression-preamble.md
examples/simple_repeater/: main.cpp
rust/: Cargo.toml  readme.md
rust/src/: lib.rs  main.rs
src/: Dispatcher.h  MeshCore.h
src/helpers/: ArduinoHelpers.h  AutoDiscoverRTCClock.h  CommonCLI.cpp  CommonCLI.h  ESP32Board.h  KISS.cpp  KISS.h
src/helpers/esp32/: ESPNOWRadio.h  TBeamBoard.cpp  TBeamBoard.h
src/helpers/radiolib/: CustomLLCC68.h  CustomLR1110.h  CustomSTM32WLx.h  CustomSX1262.h  CustomSX1268.h  CustomSX1276.h  CustomSX1281.h  CustomSX1281Wrapper.h  RadioLibWrappers.cpp  RadioLibWrappers.h
tests/: CMakeLists.txt  run_tests.sh
tests/lib/: SerialPort.cpp  SerialPort.h
tests/lib/duini/: DateTime.cpp  DateTime.h  FileSystem.cpp  FileSystem.h  RadioDriver.cpp  RadioDriver.h  SerialPort.cpp  SerialPort.h  duini.h
tests/lib/meshtnc/: ArduinoHelpers.cpp  ArduinoHelpers.h  CommonCLI.cpp  CommonCLI.h  Dispatcher.cpp  Dispatcher.h  KISS.cpp  KISS.h  MeshTNC.h  Meshcore.h  Packet.cpp  Packet.h  StaticPoolPacketManager.cpp  StaticPoolPacketManager.h  TxtDataHelpers.cpp  TxtDataHelpers.h  Utils.cpp  Utils.h
tests/src/: KISSTest.cpp  TNC.cpp  TNC.h
variants/dataparty_capstone/: platformio.ini  target.h
variants/generic-e22/: target.h
variants/heltec_ct62/: target.h
variants/heltec_v2/: target.cpp  target.h
variants/heltec_v3/: target.h
variants/lilygo_t3s3/: platformio.ini
variants/lilygo_t3s3_sx1276/: target.h
variants/lilygo_tbeam_SX1262/: target.h
variants/lilygo_tbeam_SX1276/: target.h
variants/lilygo_tlora_c6/: target.h
variants/lilygo_tlora_v2_1/: target.h
variants/meshadventurer/: target.h
variants/meshtnc_ultra/: platformio.ini  target.cpp  target.h
variants/minewsemi_me25ls01/: target.h
variants/nano_g2_ultra/: target.h
variants/picow/: target.h
variants/promicro/: target.h
variants/rak3x72/: target.h
variants/rak4631/: target.h
variants/sensecap_solar/: target.h
variants/station_g2/: target.h
variants/t1000-e/: target.h
variants/t114/: target.h
variants/techo/: target.h
variants/thinknode_m1/: target.h
variants/waveshare_rp2040_lora/: target.h
variants/wio-e5-dev/: platformio.ini  target.h
variants/wio-e5-mini/: target.h
variants/wio-tracker-l1/: target.h
variants/xiao_c3/: target.h
variants/xiao_nrf52/: target.h
variants/xiao_rp2040/: target.h
variants/xiao_s3_wio/: platformio.ini
