[package]
name = "meshtnc"
version = "0.1.1"
edition = "2024"
authors = ["Will Dillon <crates@houedillon.com>"]
homepage = "https://github.com/datapartyjs/MeshTNC"
repository = "https://github.com/datapartyjs/MeshTNC"
license = "MIT"
description = "Host tool for interacting with MeshTNC hardware"
readme = "readme.md"

[[bin]]
name = "meshtnc"
default-run = "meshtnc"

[dependencies]
tokio = { version = "^1.8", features = ["full"]}
tokio-util = {version = "0.7", features = ["codec"]}
tokio-serial = "5.4.1"
color-eyre = "0.6"
pretty_env_logger = "0.5"
clap = { version = "4.1.7", features = ["derive"] }
log = "0.4.17"
futures = "0.3"
atomic_enum = "0.3.0"
hex = "0.4"
toml = "0.9.8"
r-extcap = "0.2.5"
pcap-file = "2.0.0"
lazy_static = "1.4.0"

MeshCore = "0.0"